--- a/templates/main.html
+++ b/templates/main.html
@@ -59,7 +59,7 @@
                               </h2>
                             </div>
                             <div class="button-wrapper">
-                                <button class="btn btn--secondary btn--intro">Стать участником</button>
+                                <button class="btn btn--secondary btn--intro btn__main">Стать участником</button>
                             </div>
                         </div>
                         <div class="intro__image">
@@ -236,7 +236,7 @@
                 <div class="video__content">
                     <div class="video__preview">
                         <img class="show video__preview__img" src="../dist/images/preview.png" alt="">
-                        <iframe id="video" class="hide" width="100%" height="540px" src="https://www.youtube-nocookie.com/embed/BgscVQVW9u4?controls=0?rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="position: relative;"></iframe>
+                        <iframe id="video" class="hide" width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/BgscVQVW9u4?controls=0?rel=0&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="position: relative;"></iframe>
                     </div>
                     <div class="video__controll">
                         <img src="../dist/images/play.svg" class="video__controll__img" alt="" />
