--- a/templates/registration.html
+++ b/templates/registration.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper registration-page">
     <header class="main-header">
         <nav class="navbar navbar-light py-3">
             <div class="container-xl">
@@ -48,6 +48,7 @@
             <h2 class="section__title">
                 Регистрация
             </h2>
+          </div>
             <form class="registration-form__form">
               <div class="registration__info">
                 <div class="registration__info__items">
@@ -132,7 +133,8 @@
                     </div>
                     </div>
                     <div class="registration__agreement">
-                      <input class="registration__agreement__input" type="checkbox" name="" value="">
+                      <input id="reg__agr" class="registration__agreement__input" type="checkbox" name="" value="">
+                       <label for="reg__agr"></label>
                       <p class="registration__agreement__text">
                         Даю согласие на <span>обработку моих персональных данных</span>
                       </p>
@@ -144,53 +146,53 @@
               </div>
             <div class="intro__image">
                 <div class="image-wrapper">
-                    <img class="" src="../dist/images/bg__registration.png" alt="">
+                    <img class="" src="../dist/images/bg__registration.svg" alt="">
                 </div>
             </div>
           </div>
     </section>
     <footer class="main-footer">
-      <div class="container-xl">
-          <div class="main-footer__content">
-              <div class="main-footer__logo">
-                  <a href="#">
-                      <div class="logo">
-                          <div class="logo__image">
-                              <img src="../dist/images/logo-1-2.png" alt="">
-                          </div>
-                          <div class="logo__image">
-                              <img src="../dist/images/logo-2-white.png" alt="">
-                          </div>
-                          <div class="logo__text">
-                              Безграничная
-                              молодежь
-                          </div>
-                      </div>
-                  </a>
-              </div>
-              <div class="main-footer__info desk">
-                  <p class="main-footer__text">Реализация проекта по поручению Президента РФ Пр-2177, п.2:</p>
-                  <a href="https://kremlin.ru/acts/assignments/orders/64694" target="_blank"
-                      class="main-footer__link">kremlin.ru/acts/assignments/orders/64694</a>
-              </div>
-              <div class="main-footer__info mob">
-                  <p class="main-footer__text">Реализация проекта по поручению Президента РФ Пр-2177, п.2: <a href="https://kremlin.ru/acts/assignments/orders/64694" target="_blank"
-                      class="main-footer__link">kremlin.ru/acts/assignments/orders/64694</a></p>
-              </div>
-              <div class="main-footer__registration">
-                  <p class="main-footer__registration-text mb-2 fw-bold">Контакты для связи</p>
-                  <a href="mailto:naripsproject.ru@gmail.com"
-                      class="main-footer__registration-text">naripsproject.ru@gmail.com</a>
-              </div>
-          </div>
-          <div class="main-footer__copyright">
-              <p class="main-footer__copyright-text">©️ 2021 Ассоциация «Национальная ассоциация развития
-                  инноваций,
-                  предпринимательства и самозанятости» </p>
-              <p class="main-footer__copyright-text">Все права защищены, размещённые материалы являются объектами
-                  интеллектуальной собственности</p>
-          </div>
-      </div>
+        <div class="container-xl">
+            <div class="main-footer__content">
+                <div class="main-footer__logo">
+                    <a href="#">
+                        <div class="logo">
+                            <div class="logo__image">
+                                <img src="../dist/images/logo-1-2.png" alt="">
+                            </div>
+                            <div class="logo__image">
+                                <img src="../dist/images/logo-2-white.png" alt="">
+                            </div>
+                            <div class="logo__text">
+                                Безграничная
+                                молодежь
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="main-footer__info desk">
+                    <p class="main-footer__text">Реализация проекта по поручению Президента РФ Пр-2177, п.2:</p>
+                    <a href="https://kremlin.ru/acts/assignments/orders/64694" target="_blank"
+                        class="main-footer__link">kremlin.ru/acts/assignments/orders/64694</a>
+                </div>
+                <div class="main-footer__info mob">
+                    <p class="main-footer__text">Реализация проекта по поручению Президента РФ Пр-2177, п.2: <a href="https://kremlin.ru/acts/assignments/orders/64694" target="_blank"
+                        class="main-footer__link">kremlin.ru/acts/assignments/orders/64694</a></p>
+                </div>
+                <div class="main-footer__contact">
+                    <p class="main-footer__contact-text mb-2 fw-bold">Контакты для связи</p>
+                    <a href="mailto:naripsproject.ru@gmail.com"
+                        class="main-footer__contact-text">naripsproject.ru@gmail.com</a>
+                </div>
+            </div>
+            <div class="main-footer__copyright">
+                <p class="main-footer__copyright-text">©️ 2021 Ассоциация «Национальная ассоциация развития
+                    инноваций,
+                    предпринимательства и самозанятости» </p>
+                <p class="main-footer__copyright-text">Все права защищены, размещённые материалы являются объектами
+                    интеллектуальной собственности</p>
+            </div>
+        </div>
     </footer>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
