--- a/templates/registration.html
+++ b/templates/registration.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="registration__info__items">
                   <div class="registration-form__field">
-                      <input type="date" class="registration-form__input" name="data" placeholder="Дата рождения">
+                      <input type="text" class="registration-form__input" name="data" placeholder="Дата рождения">
                   </div>
                   <div class="registration-form__field">
                     <p class="registration-form__field__text">Например: + 38 (095) 000-00-00</p>
