--- a/templates/registration.html
+++ b/templates/registration.html
@@ -77,6 +77,10 @@
                   </div>
                 </div>
               </div>
+            </div>
+        <div class="backgr">
+          <div class="container__bg">
+            <div class="container-xl cont__bottom">
               <div class="registration__content full-height">
                 <div class="registration__info">
                 <div class="registration__gender">
@@ -144,12 +148,15 @@
                     </div>
               </form>
               </div>
+          </div>
+            </div>
             <div class="intro__image">
                 <div class="image-wrapper">
                     <img class="" src="../dist/images/bg__registration.svg" alt="">
                 </div>
             </div>
           </div>
+        </div>
     </section>
     <footer class="main-footer">
         <div class="container-xl">
