--- a/templates/registration.html
+++ b/templates/registration.html
@@ -65,7 +65,7 @@
                   </div>
                   <div class="registration-form__field">
                     <p class="registration-form__field__text">Например: + 38 (095) 000-00-00</p>
-                      <input type="number" class="registration-form__input" name="phone" placeholder="Номер телефона">
+                      <input type="text" class="registration-form__input" name="phone" placeholder="Номер телефона">
                   </div>
                 </div>
                 <div class="registration__info__items">
